添加自动下载和解压功能
目前仍然只支持单任务下载

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
             "type": "shell",
             "command": "python",
             "args": [
-                "${file}"
+                //"${file}"
+                "main.pyw"
             ],
             "problemMatcher": []
         }
