--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "python",
             "args": [
                 //"${file}"
-                "main.pyw"
+                "./src/main.pyw"
             ],
             "problemMatcher": []
         }
